log
Fri 12 May 2023 12:05:15 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
3fac85c
Fri 12 May 2023 12:07:50 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:39:42: error: ‘*mon.heapArray’ is used uninitialized [-Werror=uninitialized]
   39 |   mon->heapArray= (heapElem*) realloc(mon->heapArray, sizeof(heapElem)*mon->capac);
      |                                       ~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
adcdd00
Fri 12 May 2023 12:08:39 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
7a5c5ae
Fri 12 May 2023 12:10:00 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c6626ce
Fri 12 May 2023 12:13:47 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c2b0c1d
Fri 12 May 2023 12:14:25 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
ab91020
Fri 12 May 2023 12:16:32 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:28:7: error: unused variable ‘i’ [-Werror=unused-variable]
   28 |   int i=pq->size;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
5c3d2ee
Fri 12 May 2023 12:18:47 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:9: error: expected expression before ‘)’ token
   29 |   while(){
      |         ^
heap.c:31:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   31 |     pq->priority[]= pq->priority[];
      |       ^~
heap.c:31:18: error: expected expression before ‘]’ token
   31 |     pq->priority[]= pq->priority[];
      |                  ^
heap.c:31:23: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   31 |     pq->priority[]= pq->priority[];
      |                       ^~
heap.c:28:7: error: unused variable ‘i’ [-Werror=unused-variable]
   28 |   int i=pq->size;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
009a7a7
Fri 12 May 2023 12:19:37 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:9: error: expected expression before ‘)’ token
   29 |   while(){ //pensando en el ciclo
      |         ^
heap.c:31:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   31 |     pq->priority[]= pq->priority[];
      |       ^~
heap.c:31:18: error: expected expression before ‘]’ token
   31 |     pq->priority[]= pq->priority[];
      |                  ^
heap.c:31:23: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   31 |     pq->priority[]= pq->priority[];
      |                       ^~
heap.c:32:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   32 |     pq->priority = aux;
      |       ^~
heap.c:32:20: error: ‘aux’ undeclared (first use in this function)
   32 |     pq->priority = aux;
      |                    ^~~
heap.c:32:20: note: each undeclared identifier is reported only once for each function it appears in
heap.c:28:7: error: unused variable ‘i’ [-Werror=unused-variable]
   28 |   int i=pq->size;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
d544209
Fri 12 May 2023 12:20:34 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:9: error: expected expression before ‘)’ token
   29 |   while(){ //pensando en el ciclo
      |         ^
heap.c:31:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   31 |     pq->priority[]= pq->priority[];
      |       ^~
heap.c:31:18: error: expected expression before ‘]’ token
   31 |     pq->priority[]= pq->priority[];
      |                  ^
heap.c:31:23: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   31 |     pq->priority[]= pq->priority[];
      |                       ^~
heap.c:32:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   32 |     pq->priority = aux;
      |       ^~
heap.c:32:20: error: ‘aux’ undeclared (first use in this function)
   32 |     pq->priority = aux;
      |                    ^~~
heap.c:32:20: note: each undeclared identifier is reported only once for each function it appears in
heap.c:28:7: error: unused variable ‘i’ [-Werror=unused-variable]
   28 |   int i=pq->size;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
d4cca96
Fri 12 May 2023 12:22:00 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:9: error: expected expression before ‘)’ token
   29 |   while(){ //pensando en el ciclo
      |         ^
heap.c:31:32: error: incompatible types when assigning to type ‘int’ from type ‘heapElem’ {aka ‘struct nodo’}
   31 |     pq->heapArray[i].priority= pq->heapArray[i]priority;
      |                                ^~
heap.c:31:48: error: expected ‘;’ before ‘priority’
   31 |     pq->heapArray[i].priority= pq->heapArray[i]priority;
      |                                                ^~~~~~~~
      |                                                ;
heap.c:32:33: error: ‘aux’ undeclared (first use in this function)
   32 |     pq->heapArray[i].priority = aux;
      |                                 ^~~
heap.c:32:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d1912af
Fri 12 May 2023 12:22:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:33: error: incompatible types when assigning to type ‘int’ from type ‘heapElem’ {aka ‘struct nodo’}
   31 |     pq->heapArray[i].priority = pq->heapArray[i]priority;
      |                                 ^~
heap.c:31:49: error: expected ‘;’ before ‘priority’
   31 |     pq->heapArray[i].priority = pq->heapArray[i]priority;
      |                                                 ^~~~~~~~
      |                                                 ;
Compilation failed
c0b9c47
